--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">spiritpedia</string>
+    <string name="facebook_app_id">692958437768826</string>
+    <string name="fb_login_protocol_scheme">fb692958437768826</string>
 </resources>
