--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">spiritpedia</string>
     <string name="facebook_app_id">692958437768826</string>
     <string name="fb_login_protocol_scheme">fb692958437768826</string>
+    <string name="default_notification_channel_id" translateble="false">fcm_default_channel</string>
 </resources>
